[package]
name = "zeebest"
version = "0.20.0"
authors = ["Mackenzie Clark <mackenzie.a.z.c@gmail.com>"]
edition = "2018"
description = "An unofficial zeebe client for the future!"
repository = "https://github.com/xmclark/zeebest"
keywords = ["zeebe", "grpc", "microservices", "futures"]
readme = "README.md"
license = "MIT"

[dependencies]
bytes = "0.4"
failure = "0.1.5"
futures-preview = "0.3.0-alpha.18"
prost = "0.5"
serde = "1.0.91"
serde_json = "1.0.39"
tonic = { version = "0.1.0-alpha.3", features = ["transport", "rustls"] }

[build-dependencies]
tonic-build = "0.1.0-alpha.3"

[dev-dependencies]
atomic-counter = "1.0.1"
envy = "0.4.0"
serde_derive = "1.0.91"
structopt = "0.2.16"
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
runtime = "0.3.0-alpha.7"
tokio = "0.2.0-alpha.6"