[package]
name = "zeebest"
version = "0.20.0"
authors = ["Mackenzie Clark <mackenzie.a.z.c@gmail.com>"]
edition = "2018"
description = "An unofficial zeebe client for the future!"
repository = "https://github.com/xmclark/zeebest"
keywords = ["zeebe", "grpc", "microservices", "futures"]
readme = "README.md"
license = "MIT"

[dependencies]
async-std = { version = "1.1.0", features = ["attributes"] }
bytes = "0.4"
dirs = "2.0.2"
failure = "0.1.5"
futures-preview = "0.3.0-alpha.18"
http = "0.1.19"
prost = "0.5"
serde = "1.0.91"
serde_derive = "1.0.102"
serde_json = "1.0.39"
surf = "1.0.3"
tonic = { version = "0.1.0-alpha.6", features = ["tls", "transport", "rustls", "rustls-roots"] }
#reqwest = "0.10.0-alpha.2"
#tonic = { path = "../tonic/tonic", features = ["transport", "openssl"] }F
#tonic = { version = "0.1.0-alpha.3", features = ["transport", "rustls"] }

[build-dependencies]
tonic-build = "0.1.0-alpha.6"

[dev-dependencies]
atomic-counter = "1.0.1"
bastion = "0.3.0"
dirs = "2.0.2"
envy = "0.4.0"
serde_json = "1.0.41"
serde_derive = "1.0.91"
structopt = "0.2.16"
tokio = "0.2.0-alpha.6"
